--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ before_install:
   - gulp -v
   - java -version
 install: npm install
+before_script:
+  - chmod +x ./mvnw
 script:
   - ./mvnw clean
   - ./mvnw test
